language/move-lang/tests/move_check/expansion/duplicate_field_pack.exp
error: 

   ┌── tests/move_check/expansion/duplicate_field_pack.move:4:11 ───
   │
 4 │         S { f: 0, f: 0 };
   │           ^^^^^^^^^^^^^^ Invalid struct construction
   ·
 4 │         S { f: 0, f: 0 };
   │                   - Duplicate argument given for field 'f'
   ·
 4 │         S { f: 0, f: 0 };
   │             - Previously defined here
   │

